...

object TransactionsTab: Tab{
    override val options: TabOptions
        @Composable
        get() = TabOptions(
            index = 1u,
            title = "Transactions",
            icon = painterResource(FinioIcons.transactions)
        )

    @Composable
    override fun Content() {
        TransactionsScreenContent()
...
